<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2026 Adam Game
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->
<resources>
    <string name="app_name">Snake</string>
    <string name="snake_game_core">Score: %1$d</string>
    <string name="snake_game_up_array">↑</string>
    <string name="snake_game_left_array">←</string>
    <string name="snake_game_down_array">↓</string>
    <string name="snake_game_right_array">→</string>
    <string name="snake_game_ok">Ok</string>
    <string name="snake_game_over_title">Game Over</string>
    <string name="snake_game_dialog_message">Would you like to play again or quit the game?</string>
    <string name="snake_game_btn_about">About</string>
    <string name="snake_game_about_title">Game Instructions</string>
    <string name="snake_game_instructions">
        How to Play:\n\n
        1. Use the arrow buttons to control the snake\'s direction.\n
        2. Eat regular red food to grow and increase your score.\n
        3. Special foods have various effects:\n
           - Speed Up / Slow Down\n
           - Invisibility (Snake body disappears for 3s)\n
           - Invincibility (Wall collision allowed for 8s)\n
        4. Avoid hitting the walls (unless invincible) or your own body.\n
        5. In settings, you can enable \'Wrap Mode\' to pass through walls.
    </string>
    <string name="snake_game_exit_btn">Exit</string>
    <string name="snake_game_restart">play again</string>
    <string name="snake_game_exit">Exit\n</string>
    <string name="snake_game_exit_title">Exit</string>
    <string name="snake_game_wrap_mode">Wrape mode</string>
    <string name="snake_game_setting_item">Setting item</string>
    <string name="snake_game_setting_wrap_mode">Wraped mode</string>
    <string name="snake_game_setting_special_food">Special food mode</string>
    <string name="snake_game_setting_multi_foods_show">Allow multiple food</string>
    <string name="snake_game_setting">Setting</string>
    <string name="snake_game_setting_toast_message">Option State: %1$s</string>
    <string name="snake_game_ok_btn">Ok</string>
    <string name="snake_game_setting_special_freq">special frequency setting</string>
    <string name="snake_game_setting_freq_low">Low</string>
    <string name="snake_game_setting_freq_middle">Middle</string>
    <string name="snake_game_setting_freq_high">High</string>
    <string name="app_version">version</string>
    <string name="snake_game_title">SNAKE GAME</string>
    <string name="snake_game_start">Start Game</string>
    <string name="snake_game_leader_board">Leader Board</string>
    <string name="snake_game_no_data">No data</string>
    <string name="snake_game_leaderboard_title">leader board</string>
    <string name="snake_game_input_name">Please input your name：</string>
    <string name="snake_game_edit_hint">Player name</string>
    <string name="snake_game_user_name_dialog_title">User input dialog</string>
    <string name="snake_game_cancel">Cancel</string>
    <string name="snake_game_user_name_error">please input Non-empty string</string>
    <string name="snake_game_special_food_speedup">Speed up</string>
    <string name="snake_game_special_food_slowdown">Slow down</string>
    <string name="snake_game_special_food_shorten">Shorten</string>
    <string name="snake_game_special_food_extend">Extend</string>
    <string name="snake_game_special_food_invincible">Invincible</string>
    <string name="snake_game_special_food_invisible">Invisible</string>
    <string name="snake_game_special_food_score_double">Score double</string>
    <string name="snake_game_special_food_bomb">Bomb</string>
    <string name="snake_game_special_food_toast">Special Food: %1$s</string>
    <string name="snake_game_icon_description">This is snake game</string>
    <string name="leaderboard_rank_placeholder">1</string>
    <string name="leaderboard_name_placeholder">Player</string>
    <string name="leaderboard_date_placeholder">2026/08/27</string>
    <string name="leaderboard_score_placeholder">999</string>
</resources>