<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- Core TextView with border -->
    <TextView
        android:id="@+id/coreTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/snake_game_core"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/border_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnSetting"
        android:layout_margin="5dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snake_game_setting"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@drawable/button_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/coreTextView"
        android:layout_margin="5dp"/>

    <!-- Game Screen -->
    <com.adam.app.snake.view.SnakeView
        android:id="@+id/snakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/snake_view_background"
        app:layout_constraintBottom_toTopOf="@+id/controlPad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coreTextView"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_margin="5dp"/>

    <!-- Control button -->
    <GridLayout
        android:id="@+id/controlPad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        android:padding="16dp"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snake_game_up_array" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snake_game_left_array" />

        <Button
            android:id="@+id/btnDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snake_game_down_array" />

        <Button
            android:id="@+id/btnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snake_game_right_array" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
